# game-boy-inator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
game-boy-hardware/: Cargo.toml
game-boy-hardware/src/: cpu.rs  lib.rs  mainboard.rs  ppu.rs  ram.rs  rom.rs
game-boy-hardware/src/cpu/: alu_tests.rs  control_tests.rs  jump_branch_tests.rs  mod.rs  tests.rs
src/: cpu.rs  cpu_execute.rs  lib.rs  main.rs  mainboard.rs  ppu.rs  ram.rs  rom.rs  tests.rs  timer.rs
src/cpu/: alu_tests.rs  bitwise_tests.rs  control_tests.rs  jump_branch_tests.rs  ld_tests.rs  mod.rs  tests.rs
src/cpu/tests/: alu_tests.rs  bitwise_tests.rs  control_tests.rs  jump_branch_tests.rs  ld_tests.rs  mod.rs
src/game_boy_hardware/: cpu.rs  lib.rs  mainboard.rs  mod.rs  ppu.rs  ram.rs  rom.rs  tests.rs  timer.rs
