[package]
name = "game-boy-inator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-boy-inator"
path = "src/main.rs"

[dependencies.game-boy-hardware]
path = "game-boy-hardware"
version = "*"
features = ["cpu-debug"]

[dependencies.sdl2]
version = "0.35"
features = ["bundled",
        #"static-link"
    ]