[package]
name = "game-boy-inator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-boy-inator"
path = "src/main.rs"

[dependencies.game-boy-hardware]
path = "game-boy-hardware"
version = "*"
features = [
    # "cpu-debug",
    # "ppu-debug"
    ]

[dependencies.sdl2]
version = "=0.35.1"
features = ["bundled",
        "static-link"
    ]

[dependencies]
sdl2-sys = "=0.35.1"

[dependencies.native-dialog]
version = "0.6"
features = ["windows_dpi_awareness"]