[package]
name = "game-boy-inator"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A game boy emulator core as a library"
repository = "https://github.com/Roshinator/game-boy-inator"
readme = "README.md"

[lib]
name = "gbi"
path = "src/lib.rs"

[features]
cpu-debug = []
ppu-debug = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "1.3"